14_array_max/grade.txt
Grading at Mon Feb 10 22:03:29 UTC 2020
Attempting to compile arrayMax.c 
arrayMax.c: In function ‘arrayMax’:
arrayMax.c:6:12: error: ‘largest’ is used uninitialized in this function [-Werror=uninitialized]
   *largest =0;
            ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
